@@ -304,13 +304,6 @@
 		<!-- Name of servlet zone -->
 		<servletZone>repository</servletZone>
 
-		<!-- Referenced in service/config/shared.xqm -->
-		<hostName>http://localhost:8080</hostName>
-		<exist-media>/data/atombeat/media</exist-media>
-		<atombeat-exist-user>admin</atombeat-exist-user>
-		<atombeat-exist-password />
-
-
 		<!-- Referenced in WEB-INF/resources/config/properties-local.xml -->
 		<google-api-key />
 		<oxf.epilogue.xforms.inspector>true</oxf.epilogue.xforms.inspector>
@@ -319,8 +312,8 @@
 		<contextConfigLocation>WEB-INF/applicationContext-security-example.xml</contextConfigLocation>
 
 		<!-- Referenced in WEB-INF/security-cas-drupal.properties -->
-		<cas.url>https://www.wwarn.org/sso</cas.url>
-		<chassis.url>https://www.wwarn.org/repository</chassis.url>
+		<cas.url>http://localhost:8080/sso</cas.url>
+		<chassis.url>http://localhost:8080</chassis.url>
 
 		<!-- Referenced in WEB-INF/exist-conf.xml -->
 		<exist-data>${cDrive}/data/atombeat/exist</exist-data>
@@ -342,6 +335,9 @@
 				<!-- TPP's account -->
 				<google-api-key>ABQIAAAAOimsAXNq3_aRjfeNjoNKiRSa-bbzrR8LA0uUuc_9V-299x0KDRT4O_4TUe6_6nxTQjnUjB3IoJ_Z1g</google-api-key>
 				<oxf.epilogue.xforms.inspector>false</oxf.epilogue.xforms.inspector>
+				<contextConfigLocation>WEB-INF/applicationContext-security-example.xml</contextConfigLocation>
+				<cas.url>https://cloud1.cggh.org/sso</cas.url>
+				<chassis.url>https://cloud1.cggh.org</chassis.url>
 			</properties>
 		</profile>
 		<profile>
@@ -352,85 +348,28 @@
 				<google-api-key>ABQIAAAALKEGMPfIYQSA-VwL_MMJwxRqeKNJVUEFbN2Lzdvvt4uqQX8qsxSlxQAHMeJVCDO1vri3c1m36PYxnA</google-api-key>
 				<oxf.epilogue.xforms.inspector>false</oxf.epilogue.xforms.inspector>
 				<contextConfigLocation>WEB-INF/applicationContext-security-cas.xml</contextConfigLocation>
+				<cas.url>https://wwarn-app3.nsms.ox.ac.uk/sso</cas.url>
+				<chassis.url>https://wwarn-app3.nsms.ox.ac.uk</chassis.url>
 				<exist-data>/srv/chassis-data/exist</exist-data>
 				<orbeonLogs>/srv/chassis-data/logs/chassis.log</orbeonLogs>
 				<log4j-priority>info</log4j-priority>
 				<log4j-appender-ref>RollingFileAppender</log4j-appender-ref>
-				<cas.url>https://wwarn-app3.nsms.ox.ac.uk/sso</cas.url>
-				<chassis.url>https://wwarn-app3.nsms.ox.ac.uk</chassis.url>
 			</properties>
 		</profile>
 		<profile>
 			<id>production</id>
 			<properties>
 				<profileId>production</profileId>
-				<google-api-key>ABQIAAAAOimsAXNq3_aRjfeNjoNKiRSa-bbzrR8LA0uUuc_9V-299x0KDRT4O_4TUe6_6nxTQjnUjB3IoJ_Z1g</google-api-key>
+				<google-api-key>ABQIAAAALKEGMPfIYQSA-VwL_MMJwxSlb90VRGuJIkqh0iHprgnoFbPqfRT6op4Km2XwtyBOI0RrlbrWQC48tA</google-api-key>
 				<oxf.epilogue.xforms.inspector>false</oxf.epilogue.xforms.inspector>
 				<contextConfigLocation>WEB-INF/applicationContext-security-cas.xml</contextConfigLocation>
+				<cas.url>https://www.wwarn.org/sso</cas.url>
+                <chassis.url>https://www.wwarn.org</chassis.url>
 			    <exist-data>/srv/chassis-data/exist</exist-data>
 				<orbeonLogs>/srv/chassis-data/logs/chassis.log</orbeonLogs>
 				<log4j-priority>info</log4j-priority>
 				<log4j-appender-ref>RollingFileAppender</log4j-appender-ref>
 			</properties>
-		</profile>
-		<profile>
-			<!-- Modify catalina.sh if running tomcat as local user : export CATALINA_PID=/var/run/tomcat6.pid 
-				shift "$_RUNJAVA" $JAVA_OPTS \ -Djava.endorsed.dirs="$JAVA_ENDORSED_DIRS" 
-				-classpath "$CLASSPATH" \ -Dcatalina.base="$CATALINA_BASE" \ -Dcatalina.home="$CATALINA_HOME" 
-				\ -Djava.io.tmpdir="$CATALINA_TMPDIR" \ org.apache.catalina.startup.Bootstrap 
-				"$@" stop if [ ! -z "$CATALINA_PID" ]; then echo "Killing: `cat $CATALINA_PID`" 
-				kill -9 `cat $CATALINA_PID` echo rm $CATALINA_PID rm $CATALINA_PID else echo 
-				"Kill failed: \$CATALINA_PID not set" fi -->
-
-			<id>tomcatRunning</id>
-			<activation>
-				<file>
-					<exists>/var/run/tomcat6.pid</exists>
-				</file>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.cargo</groupId>
-						<artifactId>cargo-maven2-plugin</artifactId>
-						<version>1.0.1-alpha-2</version>
-						<configuration>
-							<wait>true</wait>
-							<container>
-								<containerId>tomcat6x</containerId>
-								<type>remote</type>
-							</container>
-							<configuration>
-								<type>runtime</type>
-								<properties>
-									<cargo.tomcat.manager.url>http://localhost:8080/manager</cargo.tomcat.manager.url>
-									<cargo.remote.username>admin</cargo.remote.username>
-									<cargo.remote.password />
-								</properties>
-							</configuration>
-							<deployer>
-								<type>remote</type>
-								<deployables>
-									<deployable>
-										<properties>
-											<context>/${servletZone}/</context>
-										</properties>
-									</deployable>
-								</deployables>
-							</deployer>
-						</configuration>
-						<executions>
-							<execution>
-								<id>do</id>
-								<phase>pre-integration-test</phase>
-								<goals>
-									<goal>deployer-redeploy</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
 		</profile>
 		<profile>
 			<activation>
